Disable quark animal variants

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -1889,7 +1889,7 @@
 	"Improved Mount Hud" = true
 	"Improved Tooltips" = true
 	"Usage Ticker" = true
-	"Variant Animal Textures" = true
+	"Variant Animal Textures" = false
 
 	[client.greener_grass]
 		"Affect Leaves" = true
